--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Welcome to My GDS 111 Class Page</h1>
-        <P>Hello Wouldn't you like to be a pepper too???</P>
+        <P>Below are a list of links to each week's lab.</P>
     </body>
 </html>
 
