--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
         <h1>Welcome to My GDS 111 Class Page</h1>
         <P>Below are a list of links to each week's lab.</P>
+        <img src="images/JohnCenaSr.jpeg" alt="John Cena's Dad">
     </body>
 </html>
 
