--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!--You, Comment Goes in Here-->
+        <!--
+            McKenzie McCall
+            GDS 111
+            yay!
+        -->
         <title>Our Class Main Page HTML/JavaScript</title>
         <meta charset="UTF-8">
     </head>
     <body>
         <h1>Welcome to My GDS 111 Class Page</h1>
         <P>Below are a list of links to each week's lab.</P>
+        <ul>
+            <li><a href="Week1/page1.html">Link to week 1 lab.</a></li>
+        </ul>
         <img src="images/JohnCenaSr.jpeg" alt="John Cena's Dad">
     </body>
 </html>
