added homework and clicker

--- a/Week 2/index.html
+++ b/Week 2/index.html
@@ -9,7 +9,7 @@
         <span id="message"></span>
         <script>
             var message = "How are you today?";
-            
+            var name = prompt("What is your name?")
 
             function alertMessage(myMessage){
                 alert(myMessage);
@@ -18,6 +18,14 @@
 
             alertMessage(message);
             alertMessage("John Cena's Dad");
+            alertMessage(name)
+            //This is a line coment
+            /*
+            This is a multi line coment
+
+            hello
+            how are you
+            */
         </script>
         <script src="scripts/scripts.js"></script>
     </body>
