--- a/Week1/page1.html
+++ b/Week1/page1.html
@@ -53,7 +53,7 @@
         <!--Example of relative path-->
         <a href="../index.html">Link to Homepage</a>
         <hr>
-        <p>&copy; 2024 HTML/JaveScript Class</p>
+        <p>&copy; 2024 HTML/JavaScript Class</p>
 
     </body>
 </html>
