--- a/Week 4/index.html
+++ b/Week 4/index.html
@@ -10,6 +10,7 @@
             <canvas width="800" height="600" style="border:1px solid black;">
                 Upgrade your browser please.
             </canvas>
+            <script src="scripts/game.js"></script>
         </div>
     </body>
 </html>
