--- a/Week 6/index.html
+++ b/Week 6/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Car Game Files</title>
+    <title>Class Game Demo</title>
    
 </head>
 <body>
@@ -15,6 +15,7 @@
     </div>
    
     <div id="instructions">
+    <!--
         <h2>INSTRUCTIONS</h2>
         <p>
             In this program you will make the avatar collect the yellow "pickups" and keep track of how many are collected in a variable.
@@ -41,6 +42,7 @@
         <p>
             You will need to research how to display text on the screen
         </p>
+    -->
     </div>
     <!--controls.js contains the keyboard events and variables for movement-->
     <script src="js/controls.js"></script>
