--- a/Week 6/index.html
+++ b/Week 6/index.html
@@ -9,6 +9,8 @@
    
 </head>
 <body>
+    <img src="images/sadHamsterPNG.png" alt="sad hampster" style="display: none;" id="SadHamster">
+    <img src="images/elGatoPlayer.webp" alt="el Gato" style="display: none;" id="ElGato">
     <div>
         <h2>Controls | <span>Use the w,a,s and d keys to move the avatar</span></h2>
         <canvas width="800" height="500"></canvas>
